[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/defaut.theme" type="Theme" id=1]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Lobby/AttentePartie.tscn" type="PackedScene" id=3]
[ext_resource path="res://Lobby/AttentePartie.gd" type="Script" id=4]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 13.7839
margin_bottom = -2.21606

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 34.0
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 234.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 353.0
margin_right = 670.0
margin_bottom = 196.0
custom_constants/vseparation = 8
custom_constants/hseparation = 20
columns = 2

[node name="NomLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 39.0
text = "Nom"
align = 2

[node name="NomTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 115.0
margin_right = 317.0
margin_bottom = 44.0
text = "Joueur"
align = 1

[node name="IpLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 57.0
margin_right = 95.0
margin_bottom = 91.0
text = "Ip"
align = 2

[node name="IpTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 115.0
margin_top = 52.0
margin_right = 317.0
margin_bottom = 96.0
text = "127.0.0.1"
align = 1

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 109.0
margin_right = 95.0
margin_bottom = 143.0
text = "Port"
align = 2

[node name="PortTextBox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 115.0
margin_top = 104.0
margin_right = 317.0
margin_bottom = 148.0
text = "32023"
align = 1

[node name="HostBouton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 156.0
margin_right = 95.0
margin_bottom = 196.0
text = "HÃ©berger"

[node name="JoinBouton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 115.0
margin_top = 156.0
margin_right = 317.0
margin_bottom = 196.0
text = "Rejoindre"

[node name="AttentePartie" parent="." groups=[
"AttentePartie",
] instance=ExtResource( 3 )]
script = ExtResource( 4 )

[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/NomTextBox" to="." method="_on_NomTextBox_text_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HostBouton" to="." method="_on_HostBouton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/JoinBouton" to="." method="_on_JoinBouton_pressed"]
